fix: fix overflow label in Counter

--- a/src/styles/components/CounterConfigurations.scss
+++ b/src/styles/components/CounterConfigurations.scss
@@ -5,27 +5,13 @@
   height: 94%;
   display: flex;
   justify-content: center;
-  position: relative;
+
   .counter-result {
-    display: grid;
+    display: flex;
     align-items: center;
     justify-content: center;
-    .background-counter {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      width: 25%;
-      height: 50%;
-      margin: auto;
-      pointer-events: none;
-      user-select: none;
-      z-index: 1;
-      opacity: 0.7;
-    }
+    
     .text-result {
-      z-index: 100;
       font-size: 21px;
       line-height: 32px;
       display: flex;
